--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- change your contract address -->
     <!--            beloW             -->
     <script>
-        CONTRACT_ADDRESS = "0x3b62c66ec8134dda184172b1bb93079c8ccb7842" 
+        CONTRACT_ADDRESS = "0xA8EAb928162CCA854b95380BBf55eE09d09d40c7" 
         IS_TESTNET = true
     </script>
 </head>
@@ -112,10 +112,10 @@ a {
         <DIv class="row mainSection">
             <div class="col mainText">
                 <h1>
-                   Penguins NFT Collection
+                   Cats NFT Collection
 
                    <!-- Change Your Name Here-->
-                   <br> Made by Talha Asif <br>
+                   <br> Made by Maryam Alsammak <br>
 
                 </h1>
             </div>
